overlays/prod/vocbench.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vocbench
  labels:
    tier: frontend
    role: vocbench
spec:
  template:
    spec:
      containers:
        volumeMounts:
        - name: "vocbench-data"
          mountPath: "/opt/vocbench3/data"
      volumes:
      - name: vocbench-data
        persistentVolumeClaim:
          claimName: vocbench-data-claim
