overlays/prod/ingress2.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: theia-public
  annotations:
    scheme: https
    url: in-situ.theia-land.fr
spec:
  tls:
    secretName: in-situ
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: backend-variable-association-ingress
spec:
  tls:
    secretName: in-situ
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: frontend-variable-association-ingress
  annotations:
    prefix: /association-ui/
spec:
  tls:
    secretName: in-situ
# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: fuseki
# spec:
#   tls:
#     secretName: in-situ
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: import-module-ingress
spec:
  tls:
    secretName: in-situ
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: json-schema-ingress
spec:
  tls:
    secretName: in-situ
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: thesaurus-static-ingress
spec:
  tls:
    secretName: in-situ
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: metadata-dataportal
spec:
  tls:
    secretName: in-situ
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: skosmos
spec:
  tls:
    secretName: in-situ
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: geonetwork-ingress
spec:
  tls:
    secretName: in-situ
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: robots-ingress
spec:
  tls:
    secretName: in-situ
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vocbench-ingress
spec:
  tls:
    secretName: in-situ
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: semanticturkey-ingress
spec:
  tls:
    secretName: in-situ
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sparql
spec:
  tls: {}
